// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-shift-download-form.vue should be rendered correctly 1`] = `
<form
  class="v-form"
  data-form=""
  novalidate="novalidate"
>
  <div>
    <div
      class="z-form-card-stub"
      title="アップロード用エクセルファイル"
    >
      <div
        class="z-form-card-stub-slot-actions"
      />
      <z-form-card-item-set-stub
        icon=""
        label=""
        noicon="true"
      >
        <p>
          条件を設定し《ダウンロード》ボタンを押してください。
        </p>
      </z-form-card-item-set-stub>
      <z-form-card-item-set-stub
        icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
        label=""
      >
        <div
          class="root"
          data-office-id=""
          data-z-form-card-item=""
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select v-autocomplete"
            error-messages=""
            label="事業所 *"
            value="1"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="combobox"
                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
              >
                <fieldset
                  aria-hidden="true"
                >
                  <legend
                    style="width: 0px;"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="v-select__slot"
                >
                  <label
                    class="v-label v-label--active theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    事業所 *
                  </label>
                  <input
                    autocomplete="off"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-menu-down theme--light"
                      />
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="1"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </z-form-card-item-set-stub>
      <z-form-card-item-set-stub
        icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
        label=""
      >
        <div
          class="root"
          data-range-type=""
          data-z-form-card-item=""
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="height: auto;"
              >
                <div
                  class="v-input--radio-group__input"
                  role="radiogroup"
                >
                  <legend
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    <div>
                      期間
                    </div>
                  </legend>
                  <v-row-stub
                    nogutters="true"
                    tag="div"
                  >
                    <v-col-stub
                      tag="div"
                    >
                      <div
                        class="v-radio theme--light"
                      >
                        <div
                          class="v-input--selection-controls__input"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                          />
                          <input
                            aria-checked="false"
                            role="radio"
                            type="radio"
                            value="3"
                          />
                          <div
                            class="v-input--selection-controls__ripple"
                          />
                        </div>
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: relative;"
                        >
                          来週
                        </label>
                      </div>
                    </v-col-stub>
                    <v-col-stub
                      tag="div"
                    >
                      <div
                        class="v-radio theme--light v-item--active"
                      >
                        <div
                          class="v-input--selection-controls__input"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                          />
                          <input
                            aria-checked="true"
                            role="radio"
                            type="radio"
                            value="6"
                          />
                          <div
                            class="v-input--selection-controls__ripple primary--text"
                          />
                        </div>
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: relative;"
                        >
                          来月
                        </label>
                      </div>
                    </v-col-stub>
                    <v-col-stub
                      tag="div"
                    >
                      <div
                        class="v-radio theme--light"
                      >
                        <div
                          class="v-input--selection-controls__input"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                          />
                          <input
                            aria-checked="false"
                            role="radio"
                            type="radio"
                            value="7"
                          />
                          <div
                            class="v-input--selection-controls__ripple"
                          />
                        </div>
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: relative;"
                        >
                          範囲を指定
                        </label>
                      </div>
                    </v-col-stub>
                  </v-row-stub>
                </div>
              </div>
              <div
                class="v-messages theme--light"
              >
                <transition-group-stub
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
        <!---->
      </z-form-card-item-set-stub>
      <z-form-card-item-set-stub
        icon="M2,2H16V16H2V2M22,8V22H8V18H18V8H22M4,4V14H14V4H4Z"
        label=""
      >
        <div
          class="root"
          data-source-type=""
          data-z-form-card-item=""
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="height: auto;"
              >
                <div
                  class="v-input--radio-group__input"
                  role="radiogroup"
                >
                  <legend
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    <div>
                      過去の勤務シフトをコピー
                    </div>
                  </legend>
                  <v-row-stub
                    nogutters="true"
                    tag="div"
                  >
                    <v-col-stub
                      tag="div"
                    >
                      <div
                        class="v-radio theme--light v-item--active"
                      >
                        <div
                          class="v-input--selection-controls__input"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                          />
                          <input
                            aria-checked="true"
                            role="radio"
                            type="radio"
                            value="-1"
                          />
                          <div
                            class="v-input--selection-controls__ripple primary--text"
                          />
                        </div>
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: relative;"
                        >
                          コピーしない
                        </label>
                      </div>
                    </v-col-stub>
                    <v-col-stub
                      tag="div"
                    >
                      <div
                        class="v-radio theme--light"
                      >
                        <div
                          class="v-input--selection-controls__input"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                          />
                          <input
                            aria-checked="false"
                            role="radio"
                            type="radio"
                            value="1"
                          />
                          <div
                            class="v-input--selection-controls__ripple"
                          />
                        </div>
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: relative;"
                        >
                          先週
                        </label>
                      </div>
                    </v-col-stub>
                    <v-col-stub
                      tag="div"
                    >
                      <div
                        class="v-radio theme--light"
                      >
                        <div
                          class="v-input--selection-controls__input"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                          />
                          <input
                            aria-checked="false"
                            role="radio"
                            type="radio"
                            value="2"
                          />
                          <div
                            class="v-input--selection-controls__ripple"
                          />
                        </div>
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: relative;"
                        >
                          今週
                        </label>
                      </div>
                    </v-col-stub>
                  </v-row-stub>
                </div>
              </div>
              <div
                class="v-messages theme--light"
              >
                <transition-group-stub
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </z-form-card-item-set-stub>
      <div
        class="root"
        data-z-action-button=""
      >
        <a
          class="font-weight-bold white--text v-btn-stub"
          color="primary"
          depressed=""
          type="submit"
        >
          <v-icon-stub
            left=""
          >
            M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
          </v-icon-stub>
          <span>
            ダウンロード
          </span>
        </a>
      </div>
      <div
        class="z-form-card-stub-slot-header"
      />
    </div>
  </div>
</form>
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is nextMonth when sourceType is NO_COPY 1`] = `
Object {
  "isCopy": false,
  "officeId": 1,
  "range": Object {
    "end": "2018-06-30",
    "start": "2018-06-01",
  },
  "source": undefined,
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is nextMonth when sourceType is lastWeek 1`] = `
Object {
  "isCopy": true,
  "officeId": 1,
  "range": Object {
    "end": "2018-06-30",
    "start": "2018-06-01",
  },
  "source": Object {
    "end": "2018-05-13",
    "start": "2018-05-07",
  },
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is nextMonth when sourceType is thisWeek 1`] = `
Object {
  "isCopy": true,
  "officeId": 1,
  "range": Object {
    "end": "2018-06-30",
    "start": "2018-06-01",
  },
  "source": Object {
    "end": "2018-05-20",
    "start": "2018-05-14",
  },
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is nextWeek when sourceType is NO_COPY 1`] = `
Object {
  "isCopy": false,
  "officeId": 1,
  "range": Object {
    "end": "2018-05-27",
    "start": "2018-05-21",
  },
  "source": undefined,
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is nextWeek when sourceType is lastWeek 1`] = `
Object {
  "isCopy": true,
  "officeId": 1,
  "range": Object {
    "end": "2018-05-27",
    "start": "2018-05-21",
  },
  "source": Object {
    "end": "2018-05-13",
    "start": "2018-05-07",
  },
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is nextWeek when sourceType is thisWeek 1`] = `
Object {
  "isCopy": true,
  "officeId": 1,
  "range": Object {
    "end": "2018-05-27",
    "start": "2018-05-21",
  },
  "source": Object {
    "end": "2018-05-20",
    "start": "2018-05-14",
  },
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is specify when sourceType is NO_COPY 1`] = `
Object {
  "isCopy": false,
  "officeId": 1,
  "range": Object {
    "end": "2021-02-28",
    "start": "2021-02-22",
  },
  "source": undefined,
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is specify when sourceType is lastWeek 1`] = `
Object {
  "isCopy": true,
  "officeId": 1,
  "range": Object {
    "end": "2021-02-28",
    "start": "2021-02-22",
  },
  "source": Object {
    "end": "2018-05-13",
    "start": "2018-05-07",
  },
}
`;

exports[`z-shift-download-form.vue submit dispatch event "submit" when rangeType is specify when sourceType is thisWeek 1`] = `
Object {
  "isCopy": true,
  "officeId": 1,
  "range": Object {
    "end": "2021-02-28",
    "start": "2021-02-22",
  },
  "source": Object {
    "end": "2018-05-20",
    "start": "2018-05-14",
  },
}
`;
